--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # ---> Node
+git-pull.sh
 # Logs
 logs
 *.log
@@ -137,7 +138,8 @@ dist
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -327,4 +329,3 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-
